# membarrier-rs

./: Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.yml
benches/: membarrier.rs
src/: apple.rs  lib.rs  windows.rs
src/check_support/: freebsd.rs  linux.rs  mod.rs
tests/: membarrier.rs
