[package]
name = "membarrier"
version = "0.2.3"
authors = ["Jeehoon Kang <jeehoon.kang@kaist.ac.kr>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/jeehoonkang/membarrier-rs"
homepage = "https://github.com/jeehoonkang/membarrier-rs"
documentation = "https://docs.rs/membarrier"
description = "Process-wide memory barrier"
keywords = ["memory-barrier", "barrier", "sys_membarrier", "rcu"]
categories = ["memory-management", "concurrency", "os"]
edition = "2024"

[dependencies]
cfg-if = "1.0"
libc = "0.2"

[target.'cfg(any(target_os = "linux", target_os = "android"))'.dependencies]
ctor = "0.6.3"
crossbeam-utils = "0.8.21"

[target.'cfg(all(any(target_os = "linux", target_os = "android"), any(target_arch = "x86", target_arch = "x86_64")))'.dependencies]
libc-print = "0.1.23"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.48.0", features = ["Win32_System_Threading"] }
