[package]
name = "membarrier2"
version = "0.1.0"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/frengor/membarrier2"
description = "Process-wide memory barrier for Linux, Windows, OSX, FreeBSD, Android, iOS and more."
keywords = ["memory-barrier", "barrier", "sys_membarrier", "rcu", "gc"]
categories = ["memory-management", "concurrency", "os"]
edition = "2024"

[dependencies]
cfg-if = "1.0"
libc = "0.2"

# Check support module dependencies
[target.'cfg(any(target_os = "linux", target_os = "android", target_os = "freebsd"))'.dependencies]
ctor = "0.6.3"
crossbeam-utils = "0.8.21"

# Currently only used in mprotect barrier for Linux
[target.'cfg(all(any(target_os = "linux", target_os = "android"), any(target_arch = "x86", target_arch = "x86_64")))'.dependencies]
libc-print = "0.1.23"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = ">=0.59, <=0.61.2", features = ["Win32_System_Threading"] }

[target.'cfg(target_vendor = "apple")'.dependencies]
mach2 = "0.6"

[target.'cfg(loom)'.dependencies]
loom = "0.7"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(loom)'] }
